add DOCKER_EMAIL to docker login

--- a/circle.yml
+++ b/circle.yml
@@ -9,16 +9,14 @@ deployment:
         branch: develop
         commands:
             - docker info
-            - docker build -t firstlookmedia/elasticsearch-ecs .
             - docker tag firstlookmedia/elasticsearch-ecs firstlookmedia/elasticsearch-ecs:develop
-            - docker login -u $DOCKER_USER -p $DOCKER_PASS
+            - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
             - docker push firstlookmedia/elasticsearch-ecs:develop
 
     master:
         branch: master
         commands:
             - docker info
-            - docker build -t firstlookmedia/elasticsearch-ecs .
             - docker tag firstlookmedia/elasticsearch-ecs firstlookmedia/elasticsearch-ecs:master
-            - docker login -u $DOCKER_USER -p $DOCKER_PASS
+            - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
             - docker push firstlookmedia/elasticsearch-ecs:master
