re-add docker build

--- a/circle.yml
+++ b/circle.yml
@@ -3,12 +3,16 @@ machine:
     services:
         - docker
 
+dependencies:
+    override:
+        - docker info
+        - docker build -t firstlookmedia/elasticsearch-ecs .
+
 deployment:
 
     develop:
         branch: develop
         commands:
-            - docker info
             - docker tag firstlookmedia/elasticsearch-ecs firstlookmedia/elasticsearch-ecs:develop
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
             - docker push firstlookmedia/elasticsearch-ecs:develop
@@ -16,7 +20,6 @@ deployment:
     master:
         branch: master
         commands:
-            - docker info
             - docker tag firstlookmedia/elasticsearch-ecs firstlookmedia/elasticsearch-ecs:master
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
             - docker push firstlookmedia/elasticsearch-ecs:master
