--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,10 @@ dependencies:
 
 test:
     override:
-        - docker run -d -p 9200:9200 firstlookmedia/elasticsearch-ecs ; sleep 10
-        - curl --retry 10 --retry-delay 5 -v http://localhost:9200
+        - >
+            docker run -d -p 9200:9200 firstlookmedia/elasticsearch-ecs
+            elasticsearch -Des.network.publish_host=127.0.0.1 ; sleep 10
+        - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
 
 deployment:
 
