--- a/circle.yml
+++ b/circle.yml
@@ -10,10 +10,11 @@ dependencies:
 
 test:
     override:
+        - export DOCKER_IP="$(docker-machine ip default)"
         - >
             docker run -d -p 9200:9200 firstlookmedia/elasticsearch-ecs
-            elasticsearch -Des.network.publish_host=127.0.0.1 ; sleep 10
-        - curl --retry 10 --retry-delay 5 -v http://127.0.0.1:9200
+            elasticsearch -Des.network.publish_host=${DOCKER_IP} ; sleep 10
+        - curl --retry 10 --retry-delay 5 -v http://${DOCKER_IP}:9200
 
 deployment:
 
